# cppbase

./: .gitignore  BlockingQueue.hpp  CMakeLists.txt  ChangeLog.txt  LICENSE  README.md
app/: Makefile
example/: Makefile  appmain.cpp
include/: AsyncPrioQueue.h  AsyncQueue.h  BlockingPrioQueue.hpp  BlockingQueue.hpp  GenericWorker.h  GenericWorker.hpp  JobBase.h  JobBase.hpp  JobChannel.h  JobChannel.hpp  PeriodicWorker.hpp  Singleton.h  Singleton.hpp  Worker.hpp  WorkerBase.h  WorkerBase.hpp  WorkerHandler.h  WorkerHandler.hpp  common.h  cppbase.h  cppbase.hpp
include/common/: typedefs.h
include/libcppbase/: BlockingQueue.h
include/worker/: GenericWorker.h  Job.h  PeriodicWorker.h  Worker.h  WorkerHandler.h
libworker/: CMakeLists.txt  GenericWorkerImpl.h  ThreadBase.h  WorkerBase.cpp
src/: GenericWorker.cpp  JobChannel.cpp  PeriodicWorker.cpp  Worker.cpp  WorkerBase.cpp
src/app/: cppmain.cpp
src/arch/x64/: x64.S
src/libcppbase/: GenericWorker.cpp  JobChannel.cpp  WorkerBase.cpp
src/platform/generic/: generic.c
src/template/: asm_template.S  c_template.c  cpp_template.cpp
src/test/: BlockingQueueFixture.h  BlockingQueueTest.cpp  Makefile  test_main.cpp
test/: .gitignore  Makefile  test_main.cpp
test/app/: Makefile  appmain.cpp
